crates/parser/tests/cases/snapshots/cases__errors__fn_no_args.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(fn_no_args), module::parse_module,\n    \"fn f {\\n  return 5\\n}\")"

---
error: function definition requires a list of parameters
  ┌─ fn_no_args:1:4
  │
1 │ fn f {
  │    ^ function name must be followed by `(`
  │
  = Note: if the function `f` takes no parameters, use an empty set of parentheses.
  = Example: fn f()
  = Note: each parameter must have a name and a type.
  = Example: fn f(my_value: u256, x: bool)


